# graphrnn

./: pyproject.toml
graphrnn/: dataset.py  graph.py  main.py  model.py  train.py  util.py  visualize.py
graphrnn/lightning_logs/version_0/: events.out.tfevents.1615202694.mlg001.302558.0
graphrnn/lightning_logs/version_1/: events.out.tfevents.1615202872.mlg001.345245.0
graphrnn/lightning_logs/version_2/: events.out.tfevents.1615202906.mlg001.345494.0
tests/: test_graphrnn.py
